setting up logo and nav bar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
 </head>
 
 <body>
+    <div class="logoimg">
+        <img src="img/lambda-black.png" alt="black lambda logo">
+   </div>
     <div class="container">
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Products</a>    
+            <a href="#">Blog</a>
+            <a href="#">Contact</a>
+        </nav>
+    <div class="headerimg">
+        <img src="img/jumbo.jpg" alt="cars zooming on the highway at night">
+    </div>
    
         <section class="top-content">
             <div class="text-container">
